--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.budayaku">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".activities.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.RegisterUser"></activity>
-        <activity android:name=".activities.LoginUser" />
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity
+            android:name=".activities.AccountNotFoundActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.UserAccountActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.UserRegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.UserLoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
