--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -40,9 +39,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:29.0.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    // Google login support
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
 
     // Circle image view
     implementation 'de.hdodenhof:circleimageview:3.0.1'
