--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
+            android:name=".activities.DetailSubModulActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.DetailModulActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.AccountNotFoundActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -36,5 +42,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
