--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    // Blur Transformation
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
 }
