--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".activities.AddDataForumActivity"></activity>
+        <activity android:name=".activities.SettingAccountActivity"></activity>
+        <activity android:name=".activities.AddDataForumActivity" />
         <activity
             android:name=".activities.DetailSubModuleActivity"
             android:screenOrientation="portrait" />
