--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_budayaku_glow"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_budayaku_glow_circle"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".activities.SettingAccountActivity"></activity>
-        <activity android:name=".activities.AddDataForumActivity" />
+        <activity
+            android:name=".activities.SettingAccountActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.AddDataForumActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.DetailSubModuleActivity"
             android:screenOrientation="portrait" />
